--- a/packages/design/css/src/modal/modal.module.css
+++ b/packages/design/css/src/modal/modal.module.css
@@ -5,7 +5,7 @@
   inset: 0 100% 100% 0;
   width: 100%;
   height: 100%;
-  z-index: var(--modal-base-z-index));
+  z-index: var(--modal-base-z-index);
   display: flex;
   align-items: center;
   justify-content: center;
