--- a/packages/design/css/src/table/table.module.css
+++ b/packages/design/css/src/table/table.module.css
@@ -11,6 +11,19 @@
     vertical-align: middle;
   }
 
+  & thead th {
+    padding: calc(var(--cell-padding-vertical) * 2) var(--cell-padding-horizontal);
+    border-bottom: 1px solid var(--color-lighten-05);
+  }
+
+  & tbody tr:first-child td {
+    padding-top: calc(var(--cell-padding-vertical) * 2);
+  }
+
+  & tbody tr:last-child td {
+    padding-bottom: calc(var(--cell-padding-vertical) * 2);
+  }
+
   & th {
     font-weight: var(--header-font-weight);
     color: var(--header-color);
@@ -22,5 +35,11 @@
 
   &.xlarge {
     --cell-padding: var(--spacing-3);
+  }
+
+  &.striped {
+    & tr:nth-child(even) {
+      background-color: var(--color-lighten-05);
+    }
   }
 }
