--- a/packages/design/css/src/animate/animate.module.css
+++ b/packages/design/css/src/animate/animate.module.css
@@ -7,12 +7,32 @@
   &.fade-in-up-small {
     animation-name: fade-in-up-small;
   }
+
+  &.fade-in-up-tiny {
+    animation-name: fade-in-up-tiny;
+  }
+
+  &.fast {
+    --animate-duration: 0.2s;
+  }
 }
 
 @keyframes fade-in-up-small {
   0% {
-    opacity: 0;
+    opacity: 0.5;
     transform: translate3d(0,10%,0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
+@keyframes fade-in-up-tiny {
+  0% {
+    opacity: 0.5;
+    transform: translate3d(0,3%,0);
   }
 
   100% {
