--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -32,6 +32,7 @@
   --color-darken-40: rgba(0, 0, 0, 40%);
   --color-darken-50: rgba(0, 0, 0, 50%);
   --color-darken-70: rgba(0, 0, 0, 70%);
+  --color-darken-80: rgba(0, 0, 0, 80%);
   --color-lighten-03: rgba(255, 255, 255, 3%);
   --color-lighten-05: rgba(255, 255, 255, 5%);
   --color-lighten-07: rgba(255, 255, 255, 7%);
@@ -52,6 +53,7 @@
   --color-gray-80: hsl(221deg, 14%, 20%);
   --color-gray-83: hsl(221deg, 14%, 17%);
   --color-gray-85: hsl(221deg, 14%, 15%);
+  --color-gray-87: hsl(221deg, 14%, 13%);
   --color-gray-90: hsl(221deg, 14%, 10%);
   --color-gray-95: hsl(221deg, 14%, 5%);
   --color-gray-100: hsl(221deg, 14%, 0%);
@@ -107,7 +109,9 @@
   --button-font-size: var(--font-size-2);
   --button-font-weight: var(--font-weight-quarterbold);
   --button-padding: var(--spacing-1) var(--spacing-15);
-  --card-background-color: var(--color-gray-80);
+  --card-background-color-base: var(--color-gray-90);
+  --card-background-color-highlight: var(--color-gray-83);
+  --card-background: radial-gradient( circle at top, var(--card-background-color-highlight) 0%, var(--card-background-color-base) 100% );;
   --card-box-shadow: var(--raised-1);
   --card-border-radius: var(--border-radius-1);
   --card-padding-horizontal: var(--spacing-2);
@@ -124,17 +128,30 @@
   --color-body: var(--color-gray-05);
   --color-body-dull: var(--color-lighten-60);
   --color-body-duller: var(--color-lighten-40);
-  --content-background: var(--color-gray-90);
-  --content-background-highlight: var(--color-gray-80);
+  --content-background: var(--color-gray-95);
+  --content-background-highlight: var(--color-gray-85);
   --content-color: var(--color-gray-10);
+  --form-element-margin-bottom: var(--spacing-2);
+  --form-heading-margin-bottom: var(--spacing-2);
   --form-label-margin-bottom: var(--spacing-1);
-  --form-spacing: var(--spacing-3);
+  --form-label-color: var(--color-gray-40);
+  --form-spacing: var(--spacing-4);
   --header-background: var(--color-darken-20);
   --header-color: var(--color-white);
   --header-height: 4rem;
   --heading-color: var(--color-gray-40);
-  --heading-font-size-relative: 80%;
-  --heading-font-weight: var(--font-weight-semibold);
+  --h1-font-size: var(--font-size-7);
+  --h1-font-weight: var(--font-weight-quarterbold);
+  --h2-font-size: var(--font-size-6);
+  --h2-font-weight: var(--font-weight-quarterbold);
+  --h3-font-size: var(--font-size-5);
+  --h3-font-weight: var(--font-weight-quarterbold);
+  --h4-font-size: var(--font-size-4);
+  --h4-font-weight: var(--font-weight-quarterbold);
+  --h5-font-size: var(--font-size-3);
+  --h5-font-weight: var(--font-weight-quarterbold);
+  --h6-font-size: var(--font-size-2);
+  --h6-font-weight: var(--font-weight-quarterbold);
   --input-background-color: var(--color-gray-83);
   --input-background-color-disabled: var(--color-gray-70);
   --input-border-radius: var(--border-radius-1);
@@ -146,7 +163,9 @@
   --main-nav-item-color: var(--nav-color-dull);
   --main-nav-item-hover-color: var(--nav-color-active);
   --main-nav-item-active-color: var(--nav-color-active);
-  --modal-background-color: var(--card-background-color);
+  --modal-background: radial-gradient( circle at top, var(--modal-background-highlight) 0%, var(--modal-background-color) 100% );
+  --modal-background-color: var(--color-gray-90);
+  --modal-background-highlight: var(--color-gray-80);
   --modal-base-z-index: 1000;
   --modal-border-color: var(--card-border-color);
   --modal-border-radius: var(--card-border-radius);
@@ -155,7 +174,7 @@
   --modal-footer-height: 70px;
   --modal-header-height: 70px;
   --modal-height: calc(100% - 4rem);
-  --modal-overlay-background-color: transparent;
+  --modal-overlay-background-color: var(--color-darken-80);
   --modal-overlay-background-color-highlight: transparent;
   --modal-padding: var(--spacing-2);
   --modal-padding-small: var(--spacing-1);
@@ -176,7 +195,7 @@
   --page-horizontal-padding: var(--spacing-5);
   --subheader-background: var(--color-darken-20);
   --subheader-border-color: var(--color-lighten-05);
-  --subheader-box-shadow: var(--raised-1);
+  --subheader-box-shadow: none;
   --subheader-color: var(--nav-color-dull);
   --subheader-height: 3rem;
 }
