--- a/packages/design/css/src/form/form.module.css
+++ b/packages/design/css/src/form/form.module.css
@@ -5,4 +5,19 @@
 .label {
   margin-bottom: var(--form-label-margin-bottom);
   display: block;
+  color: var(--form-label-color);
+}
+
+.label-inline {
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.element {
+  margin-bottom: var(--form-element-margin-bottom);
+}
+
+.heading {
+  margin-bottom: var(--form-heading-margin-bottom);
 }
