--- a/packages/design/css/src/typography/typography.module.css
+++ b/packages/design/css/src/typography/typography.module.css
@@ -8,8 +8,35 @@
 }
 
 .heading {
-  text-transform: uppercase;
-  font-size: var(--heading-font-size-relative);
-  font-weight: var(--heading-font-weight);
   color: var(--heading-color);
+}
+
+.h1 {
+  font-size: var(--h1-font-size);
+  font-weight: var(--h1-font-weight);
+}
+
+.h2 {
+  font-size: var(--h2-font-size);
+  font-weight: var(--h2-font-weight);
+}
+
+.h3 {
+  font-size: var(--h3-font-size);
+  font-weight: var(--h3-font-weight);
+}
+
+.h4 {
+  font-size: var(--h4-font-size);
+  font-weight: var(--h4-font-weight);
+}
+
+.h5 {
+  font-size: var(--h5-font-size);
+  font-weight: var(--h5-font-weight);
+}
+
+.h6 {
+  font-size: var(--h6-font-size);
+  font-weight: var(--h6-font-weight);
 }
