--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -8,9 +8,9 @@
   --color-success-light: hsl(147deg, 63%, 46%);
   --color-success-dark: hsl(147deg, 63%, 26%);
   --color-success-contrast: var(--color-white);
-  --color-warning: hsl(44deg, 100%, 77%);
-  --color-warning-light: hsl(44deg, 100%, 87%);
-  --color-warning-dark: hsl(44deg, 100%, 57%);
+  --color-warning: hsl(44deg, 87%, 47%);
+  --color-warning-light: hsl(44deg, 87%, 65%);
+  --color-warning-dark: hsl(44deg, 87%, 20%);
   --color-warning-contrast: var(--color-white);
   --color-danger: hsl(348deg, 86%, 61%);
   --color-danger-light: hsl(348deg, 86%, 71%);
@@ -50,6 +50,7 @@
   --color-gray-50: hsl(221deg, 14%, 50%);
   --color-gray-60: hsl(221deg, 14%, 40%);
   --color-gray-70: hsl(221deg, 14%, 30%);
+  --color-gray-75: hsl(221deg, 14%, 25%);
   --color-gray-80: hsl(221deg, 14%, 20%);
   --color-gray-83: hsl(221deg, 14%, 17%);
   --color-gray-85: hsl(221deg, 14%, 15%);
@@ -107,8 +108,12 @@
   --button-box-shadow-inset: inset 0 1px 0 var(--color-lighten-03);
   --button-color: var(--color-gray-10);
   --button-font-size: var(--font-size-2);
+  --button-font-size-small: var(--font-size-1);
+  --button-font-size-large: var(--font-size-3);
   --button-font-weight: var(--font-weight-quarterbold);
   --button-padding: var(--spacing-1) var(--spacing-15);
+  --button-padding-small: var(--spacing-0) var(--spacing-1);
+  --button-padding-large: var(--spacing-2) var(--spacing-3);
   --card-background-color-base: var(--color-gray-90);
   --card-background-color-highlight: var(--color-gray-83);
   --card-background: radial-gradient( circle at top, var(--card-background-color-highlight) 0%, var(--card-background-color-base) 100% );;
@@ -141,24 +146,28 @@
   --header-height: 4rem;
   --heading-color: var(--color-gray-40);
   --h1-font-size: var(--font-size-7);
-  --h1-font-weight: var(--font-weight-quarterbold);
+  --h1-font-weight: var(--font-weight-normal);
   --h2-font-size: var(--font-size-6);
-  --h2-font-weight: var(--font-weight-quarterbold);
+  --h2-font-weight: var(--font-weight-normal);
   --h3-font-size: var(--font-size-5);
-  --h3-font-weight: var(--font-weight-quarterbold);
+  --h3-font-weight: var(--font-weight-normal);
   --h4-font-size: var(--font-size-4);
-  --h4-font-weight: var(--font-weight-quarterbold);
+  --h4-font-weight: var(--font-weight-normal);
   --h5-font-size: var(--font-size-3);
-  --h5-font-weight: var(--font-weight-quarterbold);
+  --h5-font-weight: var(--font-weight-normal);
   --h6-font-size: var(--font-size-2);
-  --h6-font-weight: var(--font-weight-quarterbold);
+  --h6-font-weight: var(--font-weight-normal);
+  --icon-height: calc(var(--button-font-size) * 2.2);
+  --icon-width: calc(var(--button-font-size) * 2.2);
+  --icon-font-size: calc(var(--button-font-size) * 1.2);
   --input-background-color: var(--color-gray-83);
-  --input-background-color-disabled: var(--color-gray-70);
+  --input-background-color-disabled: var(--color-gray-80);
   --input-border-radius: var(--border-radius-1);
   --input-box-shadow: 1px 1px var(--color-lighten-10);
   --input-box-shadow-focus: 1px 1px 2px inset var(--color-darken-70);
   --input-box-shadow-inset: 1px 1px 2px inset var(--color-darken-30);
   --input-color: var(--color-gray-10);
+  --input-color-disabled: var(--color-gray-40);
   --left-nav-width: 200px;
   --main-nav-item-color: var(--nav-color-dull);
   --main-nav-item-hover-color: var(--nav-color-active);
