--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -99,20 +99,24 @@
   --raised-5: 0 10px 60px 0 var(--color-darken-20);
 
   /* App */
-  --button-background-color: var(--color-lighten-05);
+  --button-background-color: var(--color-darken-05);
   --button-background-color-hover: var(--color-lighten-07);
+  --button-background-color-disabled: var(--color-lighten-07);
   --button-border-width: 1px;
-  --button-border-color: var(--color-lighten-05);
-  --button-border-radius: var(--border-radius-4);
+  --button-border-color: var(--color-lighten-15);
+  --button-border-color-active: var(--color-success);
+  --button-border-color-disabled: transparent;
+  --button-border-radius: var(--border-radius-1);
   --button-box-shadow: 1px 1px 0 var(--color-darken-10);
   --button-box-shadow-inset: inset 0 1px 0 var(--color-lighten-03);
   --button-color: var(--color-gray-10);
+  --button-color-disabled: var(--color-lighten-15);
   --button-font-size: var(--font-size-2);
   --button-font-size-small: var(--font-size-1);
   --button-font-size-large: var(--font-size-3);
   --button-font-weight: var(--font-weight-quarterbold);
   --button-padding: var(--spacing-1) var(--spacing-15);
-  --button-padding-small: var(--spacing-0) var(--spacing-1);
+  --button-padding-small: var(--spacing-0) var(--spacing-2);
   --button-padding-large: var(--spacing-2) var(--spacing-3);
   --card-background-color-base: var(--color-gray-90);
   --card-background-color-highlight: var(--color-gray-83);
@@ -136,14 +140,14 @@
   --content-background: var(--color-gray-95);
   --content-background-highlight: var(--color-gray-85);
   --content-color: var(--color-gray-10);
-  --form-element-margin-bottom: var(--spacing-2);
-  --form-heading-margin-bottom: var(--spacing-2);
+  --form-element-margin-bottom: var(--spacing-3);
+  --form-heading-margin-bottom: var(--spacing-3);
   --form-label-margin-bottom: var(--spacing-1);
   --form-label-color: var(--color-gray-40);
-  --form-spacing: var(--spacing-4);
+  --form-spacing: var(--spacing-5);
   --header-background: var(--color-darken-20);
   --header-color: var(--color-white);
-  --header-height: 4rem;
+  --header-height: 6rem;
   --heading-color: var(--color-gray-40);
   --h1-font-size: var(--font-size-7);
   --h1-font-weight: var(--font-weight-normal);
@@ -189,10 +193,10 @@
   --modal-padding-small: var(--spacing-1);
   --modal-padding-medium: var(--spacing-3);
   --modal-padding-large: var(--spacing-4);
-  --modal-width: 700px;
+  --modal-width: 900px;
   --modal-width-small: 500px;
-  --modal-width-medium: 900px;
-  --modal-width-large: 100%;
+  --modal-width-medium: 1100px;
+  --modal-width-large: calc(100vw - 4rem);
   --modal-margin-large: 2rem;
   --nav-text-color: var(--color-lighten-40);
   --nav-icon-color: var(--color-lighten-20);
