--- a/packages/design/variables/src/variables.module.css
+++ b/packages/design/variables/src/variables.module.css
@@ -33,6 +33,7 @@
   --color-darken-50: rgba(0, 0, 0, 50%);
   --color-darken-70: rgba(0, 0, 0, 70%);
   --color-darken-80: rgba(0, 0, 0, 80%);
+  --color-darken-90: rgba(0, 0, 0, 90%);
   --color-lighten-03: rgba(255, 255, 255, 3%);
   --color-lighten-05: rgba(255, 255, 255, 5%);
   --color-lighten-07: rgba(255, 255, 255, 7%);
@@ -99,6 +100,11 @@
   --raised-5: 0 10px 60px 0 var(--color-darken-20);
 
   /* App */
+  --alert-background: var(--card-background);
+  --alert-border-width: var(--border-width);
+  --alert-border-color: var(--color-gray-20);
+  --alert-border-radius: var(--border-radius-1);
+  --alert-highlight-border-thickness: calc(var(--border-width) * 3);
   --button-background-color: var(--color-darken-05);
   --button-background-color-hover: var(--color-lighten-07);
   --button-background-color-disabled: var(--color-lighten-07);
@@ -121,8 +127,10 @@
   --card-background-color-base: var(--color-gray-90);
   --card-background-color-highlight: var(--color-gray-83);
   --card-background: radial-gradient( circle at top, var(--card-background-color-highlight) 0%, var(--card-background-color-base) 100% );;
-  --card-box-shadow: var(--raised-1);
+  --card-border-color: var(--color-lighten-15);
   --card-border-radius: var(--border-radius-1);
+  --card-border-width: var(--border-width);
+  --card-box-shadow: var(--raised-1);
   --card-padding-horizontal: var(--spacing-2);
   --card-padding-horizontal-small: var(--spacing-1);
   --card-padding-horizontal-medium: var(--spacing-3);
@@ -131,8 +139,6 @@
   --card-padding-vertical-small: var(--spacing-1);
   --card-padding-vertical-medium: var(--spacing-3);
   --card-padding-vertical-large: var(--spacing-4);
-  --card-border-width: var(--border-width);
-  --card-border-color: var(--color-lighten-05);
   --card-padding: var(--border-radius-1);
   --color-body: var(--color-gray-05);
   --color-body-dull: var(--color-lighten-60);
@@ -145,7 +151,11 @@
   --form-label-margin-bottom: var(--spacing-1);
   --form-label-color: var(--color-gray-40);
   --form-spacing: var(--spacing-5);
-  --header-background: var(--color-darken-20);
+  --footer-height: 50px;
+  --footer-background: var(--card-background-color-base);
+  --footer-border-color: var(--card-border-color);
+  --footer-box-shadow: var(--raised-1);
+  --header-background: var(--color-darken-90);
   --header-color: var(--color-white);
   --header-height: 6rem;
   --heading-color: var(--color-gray-40);
@@ -207,8 +217,11 @@
   --nav-color-active: var(--color-gray-10);
   --page-horizontal-padding: var(--spacing-5);
   --subheader-background: var(--color-darken-20);
-  --subheader-border-color: var(--color-lighten-05);
-  --subheader-box-shadow: none;
+  --subheader-border-color: var(--color-lighten-15);
+  --subheader-box-shadow: var(--raised-2);
   --subheader-color: var(--nav-color-dull);
   --subheader-height: 3rem;
+  --toaster-gap: var(--spacing-1);
+  --toaster-padding: var(--spacing-2);
+  --toaster-width: 300px;
 }
